web/app/static/css/claslite.css
/* Eric Meyer reset, modified */

html, body, div, span, applet, object, iframe,
h1, h2, h3, h4, h5, h6, p, blockquote, pre,
a, abbr, acronym, address, big, cite, code,
del, dfn, em, font, img, ins, kbd, q, s, samp,
small, strike, strong, sub, sup, tt, var,
b, u, i, center,
dl, dt, dd, ol, ul, li,
fieldset, form, label, legend,
table, caption, tbody, tfoot, thead, tr, th, td {
	margin: 0;
	padding: 0;
	border: 0;
	outline: 0;
	font-size: 100%;
	vertical-align: baseline;
	background: transparent;
}

body {
	line-height: 1;
}

ol, ul {
	list-style: none;
}

blockquote, q {
	quotes: none;
}

blockquote:before, blockquote:after,
q:before, q:after {
	content: '';
	content: none;
}

/* remember to define focus styles! */
:focus {
	outline: 0;
}

/* remember to highlight inserts somehow! */
ins {
	text-decoration: none;
}

del {
	text-decoration: line-through;
}

/* tables still need 'cellspacing="0"' in the markup */
table {
	border-collapse: collapse;
	border-spacing: 0;
}

/* Global */

html, body {
	width: 100%;
	height: 100%;
	margin: 0px;
	padding: 0px;
	position: absolute;
	font-family: Arial,sans-serif;
	background: #FFF;
	color: #000;
	overflow: hidden;
}

html, body, button, input, select, td {
	font-size: 15px;
}

.float-left {
	float: left;
}

.float-right {
	float: right;
}

.clear-left {
	clear: left;
}

.clear-right {
	clear: right;
}

.clear-both {
	clear: both;
}

a {
	text-decoration: none;
}

a:hover {
	text-decoration: underline;
}

.section {
	margin: 16px 0 12px 0;
	font-weight: bold;
}

form.input-form {
	width: 330px;
	margin-bottom: 10px;
}

div.button-row {
	text-align: right;
}

button.cancel {
	font-size:70%;
	margin-right: 10px;
}

button.submit {
	font-weight: bold;
}

button.view-button {
	width: 5.5em;
	text-align: left;
}

img.toggle-expand {
	border: 0;
	width: 16px;
	height: 16px;
	margin-right: 4px;
	cursor: pointer;
}

img.icon16 {
	border: 0;
	width: 16px;
	height: 16px;
}

.block {
	display: block;
}

.inline {
	display: inline;
}

.inline-block {
	display: inline-block;
}

/* Sprites */

div.sprite {
	background: url(../images/sprites.png) no-repeat;
}

div.icon16 {
	width: 16px;
	height: 16px;
	background-position: 16px 0;
}

div.icon16-arrow-circle {
	background-position: 0 0;
}

div.icon16-cross {
	background-position: -16px 0;
}

div.icon16-cross-circle {
	background-position: -32px 0;
}

div.icon16-plus {
	background-position: -48px 0;
}

div.icon16-plus-circle {
	background-position: -64px 0;
}

div.icon16-tick {
	background-position: -80px 0;
}

div.icon16-tick-circle {
	background-position: -96px 0;
}

div.icon16-toggle {
	background-position: -112px 0;
}

div.icon16-toggle-expand {
	background-position: -128px 0;
}


/* Header */

#header {
	position: relative;
	width: 100%;
	height: 76px;
	font-size: 16px;
	color: #F9FDFA;
	background: url(../images/claslite-logo.png) no-repeat #26432B;
	background-position: -3px 0;
	margin-bottom: 8px;
}

#header-tagline {
	font-size: 26px;
	position: absolute;
	left: 197px;
	bottom: 32px;
}

#header-subtitle {
	font-size: 18px;
	line-height: 18px;
	font-weight: bold;
	position: absolute;
	left: 10px;
	top: 50px;
}

#header-links {
	position: absolute;
	top: 13px;
	right: 10px;
	text-align: right;
}

#header-links a, #header-links a:visited {
	color: #F9FDFA;
}

#site-links {
	margin-bottom: 14px;
}

span.pipe {
	padding: 0 6px;
	color: #9EB08E;
}

/* Tabs */

div.tabs {
	width: 100%;
	background: url("../images/tabs-background.gif") repeat-x bottom;
	line-height: normal;
}

ul.tabs {
	margin: 0;
	padding: 2px 10px 0 8px;
	list-style: none;
}

ul.tabs li {
	display: inline;
	margin: 0;
	padding: 0;
}

ul.tabs a {
	float: left;
	outline: none;
	background: url("../images/tabs.gif") no-repeat left top;
	font-size: 15px;
	margin: 0 6px 0 0;
	padding: 0 0 0 9px;
	border-bottom: 1px solid #84B0C7;
	text-decoration: none;
}

ul.tabs a span {
	float: left;
	display: block;
	cursor: pointer;
	background: url("../images/tabs.gif") no-repeat right top;
	padding: 5px 15px 4px 6px;
	font-weight: bold;
	color: #555;
}

ul.tabs a.hover span {
	color: #555;
}

ul.tabs li.selected a {
	background-position: 0 -150px;
	border-width: 0;
	margin-top: -2px;
}

ul.tabs li.selected a span {
	background-position: 100% -150px;
	padding-bottom: 7px;
	color: #000;
}

ul.tabs a.hover {
	background-position: 0% -150px;
}

ul.tabs a.hover span {
	background-position: 100% -150px;
}

#tabs-base {
	width: 100%;
	height: 12px;
	background: #D5E1E8 url("../images/tabs-background.gif") repeat-x bottom;
}

/* Main */

#main {
	position: relative;
	width: 100%;
}

/* Visibility selectors */

#outermost.map #mapwrap {
	visibility: visible;
}

#outermost.stats #statswrap {
	visibility: visible;
}

#outermost.map .stats-only,
#outermost.stats .map-only {
}

#outermost.forestcover .forestview-forestchange,
#outermost.forestchange .forestview-forestcover,
#outermost.map .stats-only,
#outermost.stats .map-only {
	display: none;
}

/* Sidebar */

#sidebar-outer {
	position: absolute;
	left: 0;
	top: 0;
	width: 350px;
	height: 100%;
}

#sidebar-scrolling {
	margin: 12px 10px;
	width: 100%;
}

/* Locations */

#location-search-form {
	width: 330px;
	padding-bottom: 6px;
	border-bottom: 1px solid #84B0C7;
	margin-bottom: 6px;
}

#location-search-input, #location-search-buttons {
	margin-top: 6px;
	display: block;
	width: 330px;
}

#location-search-buttons {
	position: relative;
}

#view-location-map {
	display: block;
	float: right;
}

#location-results-list {
	width: 330px;
}

ul.geocode-list {
}

li.geocode-item {
	border: 1px solid white;
	margin: 1px;
	padding: 2px;
	cursor: pointer;
}

li.geocode-item.hover, li.geocode-item.active {
	border: 1px solid #84B0C7;
}

li.geocode-item.active {
	background-color: #DDD;
}

/* Color picker */

div.color-picker-row {
	margin-bottom: 6px;
}

input.color-picker {
	font-size: 1px;
	width:25px;
	height:20px;
	/*padding: 2px;*/
	margin-right: 2px;
	color: transparent !important;
	cursor: pointer;
}

#mColorPickerInput {
	font-size:13px !important;
}

div.color-picker-box {
	float: left;
	width: 90px;
	padding-left: 20px;
}

div.color-picker-box label {
	display: block;
	/*font-weight: bold;*/
	margin-bottom: 6px;
}

/* Color legend */

.legend-colors {
	margin: 8px 0 12px 30px;
}

.legend-color {
	width: 14px;
	height: 14px;
	float: left;
}

.legend-label {
	margin-left:4px;
	font-size: 14px;
	line-height: 14px;
	float: left;
}

/* Slider */

div.slider-panel {
	margin-top: 16px;
}

.slider-label {
	padding: 4px 8px 0 0;
	float: left;
}

/* slider root element */
.slider { 
	background-color:#D5E1E8;
	height:8px; 
	position:relative; 
	cursor:pointer;
	border:1px solid #84B0C7;
	width:150px;
	float:left; 
	clear:right;
	margin-top:9px;
	-moz-border-radius:4px; 
	-webkit-border-radius:4px; 
	-moz-box-shadow:inset 0 0 8px #84B0C7
}

/* progress bar (enabled with progress: true) */
.progress {
	height:9px; 
	background-color:#C5FF00; 
	display:none;
	opacity:0.6;
}

/* drag handle */
.handle { 
	background:#fff url(../images/h30.png) repeat-x 0 0; 
	height:16px;
	width:16px;
	top:-7px;
	position:absolute; 
	display:block; 
	margin-top:1px;
	border:2px solid #84B0C7;
	cursor:pointer;
	-moz-box-shadow:0 0 4px #84B0C7;
	-webkit-box-shadow:0 0 4px #84B0C7;
	-moz-border-radius:6px;
	-webkit-border-radius:6px; 

}

/* the input field */
.range {
	border:1px solid #84B0C7;
	float:left;
	font-size:16px;
	margin:0 0 0 10px;
	padding:3px 0;
	text-align:center;
	width:38px;
	-moz-border-radius:5px; 
	-webkit-border-radius:5px; 		
}

/* Forest change */

.date-panel {
	float: left;
	width: 150px;
	text-align: center;
}

.date-panel select {
	margin-top: 8px;
}

/* Map */

#mapwrap, #statswrap {
	position: absolute;
	border-left:1px solid #84B0C7;
	left: 350px;
	top: 0;
	height: 100%;
	visibility: hidden;
}

/* Statistics */

div.statistics-section {
	float: left;
	margin-bottom: 30px;
}

div.statistics-section h2 {
	margin-bottom: 8px;
}

div.statistics-block {
	position: relative;
}

#statistics-units {
	margin-top: 12px;
}

#statswrap {
	overflow: auto;
}

#stats-scroll {
	padding: 12px;
}

table.stats-table {
	margin-top: 12px;
}

table.stats-table  th, table.stats-table  td {
	font-size: 14px;
	border: 1px solid #BBB;
	padding: 4px;
}

table.stats-table  th.stats-table-topleft {
	border: none;
}

table.stats-table  td {
	text-align: right;
}

/* Spinner */

#spinner {
	/*z-index: 999999;*/
	/*filter: alpha(opacity=70);*/
	/*opacity: 0.70;*/
	/*-moz-opacity: 0.70;*/
	/*position: absolute;*/
	display: none;
	position: absolute;
	width: 128px;
	height: 128px;
	background: url(../images/spinner.gif) no-repeat;
}

/* Logos */

#earth-engine-logo {
	position: absolute;
	right: 5px;
	top: 81px;
	display: block;
	text-decoration: none;
	padding: 4px 4px 2px 4px;
	color: #444;
	font-size: 12px;
	white-space: nowrap;
	background-color: white;
	border: 1px solid white;
}

#earth-engine-logo:hover {
	border-color: #84B0C7;
}

#earth-engine-logo-powered-by {
	color: #666;
	font-size: 11px;
	padding: 0 0 3px 1px;
}

#earth-engine-logo-img {
	width: 44px;
	height: 15px;
	padding-top: 2px;
}

#earth-engine-logo-name {
	color: #444;
	font-size: 12px;
}

#cis-logo {
	position: absolute;
	right: 5px;
	bottom: 20px;
	width: 180px;
	height: 81px;
	background: url(../images/cis-logo.gif) no-repeat;
}

